--- a/apps/admin/project.json
+++ b/apps/admin/project.json
@@ -21,7 +21,10 @@
           "node_modules/quill/dist/quill.core.css",
           "node_modules/quill/dist/quill.snow.css"
         ],
-        "scripts": ["node_modules/quill/dist/quill.js"]
+        "scripts": [
+          "node_modules/quill/dist/quill.js",
+          "node_modules/chart.js/dist/chart.js"
+        ]
       },
       "configurations": {
         "production": {
