--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
     "@nrwl/angular": "15.4.4",
     "chart.js": "^4.1.2",
     "i18n-iso-countries": "^7.5.0",
@@ -45,6 +46,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "^10.4.0",
     "cypress": "^11.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -53,7 +55,9 @@
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
     "nx": "15.4.4",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
