--- a/libs/orders/.eslintrc.json
+++ b/libs/orders/.eslintrc.json
@@ -4,21 +4,28 @@
   "overrides": [
     {
       "files": ["*.ts"],
-      "extends": [
-        "plugin:@nrwl/nx/angular",
-        "plugin:@angular-eslint/template/process-inline-templates"
-      ],
-      "parserOptions": { "project": ["libs/orders/tsconfig.*?.json"] },
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
-          { "type": "attribute", "prefix": "orders", "style": "camelCase" }
+          {
+            "type": "attribute",
+            "prefix": "eshop",
+            "style": "camelCase"
+          }
         ],
         "@angular-eslint/component-selector": [
           "error",
-          { "type": "element", "prefix": "orders", "style": "kebab-case" }
+          {
+            "type": "element",
+            "prefix": "eshop",
+            "style": "kebab-case"
+          }
         ]
-      }
+      },
+      "extends": [
+        "plugin:@nrwl/nx/angular",
+        "plugin:@angular-eslint/template/process-inline-templates"
+      ]
     },
     {
       "files": ["*.html"],
