--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nrwl/angular": "15.4.4",
     "chart.js": "^4.1.2",
     "i18n-iso-countries": "^7.5.0",
+    "ngx-toastr": "^16.0.2",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.0.1",
