--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js"
+    "postinstall": "node ./decorate-angular-cli.js",
+    "build": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@nrwl/angular": "15.4.4",
     "chart.js": "^4.1.2",
+    "cloudinary": "^1.33.0",
     "i18n-iso-countries": "^7.5.0",
     "ngx-toastr": "^16.0.2",
     "primeflex": "^3.3.0",
@@ -55,7 +57,6 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
-    "nx": "15.4.4",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
